--- a/RF_Go/Components/Licensing/AccountInfo.razor
+++ b/RF_Go/Components/Licensing/AccountInfo.razor
@@ -1,9 +1,10 @@
 ﻿@using System.Net.Http.Json
-@using Utils
 @using Models.Licensing
 @using System.Diagnostics;
+@using RF_Go.Utils
 
 @inject NavigationManager NavigationManager
+@inject RF_Go.Utils.AuthService AuthService
 
 <MudContainer MaxWidth="MaxWidth.Medium" Style="margin: auto; padding: 20px;">
     <MudPaper Elevation="2" Class="pa-4">
@@ -49,23 +50,26 @@
         <MudDivider Class="mt-4 mb-4" />
 
         <MudButton Variant="Variant.Outlined" Color="Color.Error" OnClick="ConfirmUserDeletion">
-            Supprimer mon compte
+            Delete my account
+        </MudButton>
+        <MudButton Variant="Variant.Outlined" Color="Color.Error" OnClick="LogOut">
+            Log Out
         </MudButton>
         <MudText>@Message</MudText>
     </MudPaper>
 </MudContainer>
 
-<MudDialog @bind-IsVisible="IsDeleteDialogOpen" MaxWidth="MaxWidth.Small" Style="padding: 20px;">
-    <DialogContent>Confirmer la suppression</DialogContent>
+<MudDialog @bind-Visible="IsDeleteDialogOpen" MaxWidth="MaxWidth.Small" Style="padding: 20px;">
+    <DialogContent>Confirm deletion</DialogContent>
     <DialogContent>
-        <MudText Typo="Typo.body1">Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.</MudText>
+        <MudText Typo="Typo.body1">Are you sure to delete your account ? This action is irreversible.</MudText>
     </DialogContent>
     <DialogActions>
         <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="() => IsDeleteDialogOpen = false">
-            Annuler
+            Cancel
         </MudButton>
         <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="DeleteUser">
-            Supprimer
+            Delete
         </MudButton>
     </DialogActions>
 </MudDialog>
@@ -76,6 +80,7 @@
     private string Message = "";
     private HttpClient client = new HttpClient();
 
+
     protected override async Task OnInitializedAsync()
     {
         User = await SecureStorageUtils.GetUserFromSecureStorage();
@@ -85,7 +90,48 @@
     {
         IsDeleteDialogOpen = true;
     }
+    private async Task LogOut()
+    {
 
+        try
+        {
+            string accessToken = await AuthService.GetValidAccessTokenAsync();
+            string refreshToken = await TokenStorage.GetRefreshTokenAsync();
+            if (string.IsNullOrEmpty(accessToken))
+            {
+                Message = "Access token is missing. Are you connected to internet ? Can't log out.";
+                return;
+            }
+
+            using (var client = new HttpClient())
+            {
+                client.DefaultRequestHeaders.Authorization = new System.Net.Http.Headers.AuthenticationHeaderValue("Bearer", accessToken);
+                client.DefaultRequestHeaders.Add("X-API-KEY", AppConfig.ApiKey);
+                var payload = new
+                {
+                    token = refreshToken
+                };
+                var baseUrl = AppConfig.ApiBaseUrl;
+                var response = await client.PostAsJsonAsync($"{baseUrl}/auth/logout", payload);
+
+                if (response.IsSuccessStatusCode)
+                {
+                    SecureStorage.Remove("access_token");
+                    SecureStorage.Remove("refresh_token");
+                    NavigationManager.NavigateTo("/login");
+                }
+                else
+                {
+                    var error = await response.Content.ReadAsStringAsync();
+                    Message = $"Error server: {response.StatusCode}. Details: {error}";
+                }
+            }
+        }
+        catch (Exception ex)
+        {
+            Message = $"Error: {ex.Message}";
+        }
+    }
     private async Task DeleteUser()
     {
         try
@@ -95,17 +141,19 @@
             {
                 // SecureStorage.RemoveAll(); // A supprimer en prod, on supprime que si le user est delete de la DB
                 client.DefaultRequestHeaders.Add("X-API-KEY", AppConfig.ApiKey);
+                string accessToken = await AuthService.GetValidAccessTokenAsync();
+                client.DefaultRequestHeaders.Authorization = new System.Net.Http.Headers.AuthenticationHeaderValue("Bearer", accessToken);
                 string baseUrl = AppConfig.ApiBaseUrl;
                 var response = await client.DeleteAsync($"{baseUrl}/users/{userKey}");
                 if (response.IsSuccessStatusCode)
                 {
                     SecureStorage.RemoveAll();
                     NavigationManager.NavigateTo("/register");
-
                 }
                 else
                 {
-                    Message = "Erreur lors de la suppression de votre compte.";
+                    var error = await response.Content.ReadAsStringAsync();
+                    Message = $"Error server: {response.StatusCode}. Details: {error}";
                 }
             }
         }
