--- a/RF_Go/Components/Modal/SyncModal.razor
+++ b/RF_Go/Components/Modal/SyncModal.razor
@@ -14,7 +14,6 @@
 
 <MudDialog>
     <DialogContent>
-        <MudText Typo="Typo.h6">Choose a device to map</MudText>
         <MudTable Items="@Devices">
             <HeaderContent>
                 <MudTh>Name</MudTh>
@@ -27,11 +26,14 @@
                 <MudTd>@context.Name</MudTd>
                 <MudTd>@context.Brand</MudTd>
                 <MudTd>@context.Model</MudTd>
-                <MudTd>@context.Frequency</MudTd>
+                <MudTd>@context.Frequency & @context.IpAddress</MudTd>
                 <MudTd>
-                    <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => SyncToDevice(context)">
-                        Sync to Device
-                    </MudButton>
+                    @if (IsSyncable(context))
+                    {
+                            <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => SyncToDevice(context)">
+                                Sync to Device
+                            </MudButton>
+                    }
                     <MudButton Variant="Variant.Filled" Color="Color.Secondary" @onclick="() => SyncFromDevice(context)">
                         Sync from Device
                     </MudButton>
@@ -86,7 +88,7 @@
         await DeviceMappingService.SyncFromDevice(offlineDevice);
         await DiscoveryService.CheckDeviceSync(offlineDevice);
         await DevicesViewModel.UpdateDeviceAsync(offlineDevice);
-
+        Snackbar.Add("Device Synced", Severity.Success);
         MudDialog.Close(DialogResult.Ok(offlineDevice));
     }
 
@@ -94,7 +96,28 @@
     {
         return OnlineDevices?.FirstOrDefault(device => device.SerialNumber == serialNumber);
     }
-
+    private bool IsSyncable(RFDevice device)
+    {
+        if ((device.IsSynced) && device.IpAddress != "0.0.0.0")
+        {
+            foreach (RFChannel chan in device.Channels)
+            {
+                if (chan.Frequency == 0 || chan.ChannelName == null)
+                {
+                    return false;
+                }
+                else
+                {
+                    return true;
+                }
+            }
+            return false;
+        }
+        else
+        {
+            return false;
+        }
+    }
     private void Cancel()
     {
         MudDialog.Cancel();
