Adding features : Magic sync from and to devices. Adding a timeout to get the "?" when a device is missing.

--- a/RF_Go/Components/Modal/OnlineDevicesModal.razor
+++ b/RF_Go/Components/Modal/OnlineDevicesModal.razor
@@ -4,7 +4,7 @@
 
 <MudDialog>
     <DialogContent>
-        <OnlineTab DevicesViewModel="DevicesViewModel" />
+        <OnlineTab/>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="CloseModal" Color="Color.Secondary">Close</MudButton>
