--- a/RF_Go/wwwroot/css/app.css
+++ b/RF_Go/wwwroot/css/app.css
@@ -11,6 +11,10 @@ html {
 td .portal {
     height: unset;
 }
+.header-th {
+
+
+}
 .mud-input-control .mud-select-input {
     margin-top: 0 !important;
 }
