--- a/RF_Go/Components/DeviceSelection.razor
+++ b/RF_Go/Components/DeviceSelection.razor
@@ -1,4 +1,4 @@
-﻿@using MudBlazor
+﻿﻿@using MudBlazor
 @using Newtonsoft.Json
 @using System.IO
 @using System
@@ -14,62 +14,62 @@
 @* <MudText Typo="Typo.h5" Class="pl-6 pt-2">Devices Selection</MudText> */ *@
 
 <div id="SelectDeviceMenu">
-        <MudGrid Spacing="2" Justify="Justify.Center" Class="pl-6 pr-6">
-                <MudItem xs="12">
-                    <MudSelect T="string" HelperText="Choose device brand" Placeholder="Please Select"
-                       AdornmentIcon="@Icons.Material.Filled.LaptopMac" AdornmentColor="Color.Primary" Value="@Device.Brand" ValueChanged="@((string e) => OnBrandChanged(e))">
-                        @foreach (var brand in DeviceData.Brands.Keys)
-                        {
-                            <MudSelectItem T="string" value="@brand">@brand</MudSelectItem>
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem xs="12">
-                    <MudSelect T="string" HelperText="Choose device model" Placeholder="Please Select"
-                               AdornmentIcon="@Icons.Material.Filled.WifiChannel" AdornmentColor="Color.Primary" Value="@Device.Model" ValueChanged="@((string e) => OnModelChanged(e))">
-                        <option value="" disabled selected hidden>Choose a model...</option>
-                        @if (Device.Brand is null)
-                        {
-                            <MudSelectItem T="string">Choose a brand first</MudSelectItem>
-                        }
-                        else
-                        {
-                                @foreach (var model in DeviceData.Brands[Device.Brand].Keys)
-                                {
-                                    <MudSelectItem T="string" value="@model">@model</MudSelectItem>
-                                }
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem xs="12">
-                    <MudSelect T="string" HelperText="Choose device frequency" Placeholder="Please Select"
-                               AdornmentIcon="@Icons.Material.Filled.Fastfood" AdornmentColor="Color.Primary" @bind-Value="Device.Frequency" >
-                        @if (Device.Model == "" || Device.Model is null)
-                        {
-                            <MudSelectItem T="string">Choose a model first</MudSelectItem>
-                        }
-                        else
-                        {
-                            @foreach (var frequency in DeviceData.Brands[Device.Brand][Device.Model].Keys)
-                            {
-                                <MudSelectItem T="string" value="@frequency">@frequency ( @DeviceData.Brands[Device.Brand][Device.Model][frequency][0] - @DeviceData.Brands[Device.Brand][Device.Model][frequency][1] )</MudSelectItem>
-                            }
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem xs="12">
-                    <MudSelect HelperText="Choose device frequency" Placeholder="Please Select" AdornmentColor="Color.Primary"
-                               @bind-Value="@selectedQuantity">
-                            @foreach (var option in frequencyOptions)
-                            {
-                                <MudSelectItem T="int" value="@option">@option</MudSelectItem>
-                            }
-                    </MudSelect>
-                </MudItem>
-                <MudButton @onclick="() => SaveDeviceInDB(Device)">Save device</MudButton>
-        </MudGrid>
+    <MudGrid Spacing="2" Justify="Justify.Center" Class="pl-6 pr-6">
+        <MudItem xs="12">
+            <MudSelect T="string" HelperText="Choose device brand" Placeholder="Please Select"
+            AdornmentIcon="@Icons.Material.Filled.LaptopMac" AdornmentColor="Color.Primary" Value="@Device.Brand" ValueChanged="@((string e) => OnBrandChanged(e))">
+                @foreach (var brand in DeviceData.Brands.Keys)
+                {
+                    <MudSelectItem T="string" value="@brand">@brand</MudSelectItem>
+                }
+            </MudSelect>
+        </MudItem>
+        <MudItem xs="12">
+            <MudSelect T="string" HelperText="Choose device model" Placeholder="Please Select"
+            AdornmentIcon="@Icons.Material.Filled.WifiChannel" AdornmentColor="Color.Primary" Value="@Device.Model" ValueChanged="@((string e) => OnModelChanged(e))">
+                <option value="" disabled selected hidden>Choose a model...</option>
+                @if (Device.Brand is null)
+                {
+                    <MudSelectItem T="string">Choose a brand first</MudSelectItem>
+                }
+                else
+                {
+                    @foreach (var model in DeviceData.Brands[Device.Brand].Keys)
+                    {
+                        <MudSelectItem T="string" value="@model">@model</MudSelectItem>
+                    }
+                }
+            </MudSelect>
+        </MudItem>
+        <MudItem xs="12">
+            <MudSelect T="string" HelperText="Choose device frequency" Placeholder="Please Select"
+            AdornmentIcon="@Icons.Material.Filled.Fastfood" AdornmentColor="Color.Primary" @bind-Value="Device.Frequency">
+                @if (Device.Model == "" || Device.Model is null)
+                {
+                    <MudSelectItem T="string">Choose a model first</MudSelectItem>
+                }
+                else
+                {
+                    @foreach (var frequency in DeviceData.Brands[Device.Brand][Device.Model].Keys)
+                    {
+                        <MudSelectItem T="string" value="@frequency">@frequency ( @DeviceData.Brands[Device.Brand][Device.Model][frequency][0] - @DeviceData.Brands[Device.Brand][Device.Model][frequency][1] )</MudSelectItem>
+                    }
+                }
+            </MudSelect>
+        </MudItem>
+        <MudItem xs="12">
+            <MudSelect HelperText="Choose device frequency" Placeholder="Please Select" AdornmentColor="Color.Primary"
+            @bind-Value="@selectedQuantity">
+                @foreach (var option in frequencyOptions)
+                {
+                    <MudSelectItem T="int" value="@option">@option</MudSelectItem>
+                }
+            </MudSelect>
+        </MudItem>
+        <MudButton @onclick="() => SaveDeviceInDB(Device)">Save device</MudButton>
+    </MudGrid>
 </div>
-    @code 
+@code
 {
     [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
     [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
@@ -91,17 +91,17 @@
         await DevicesViewModel.LoadDevicesAsync();
         await GroupsViewModel.LoadGroupsAsync();
         await base.OnInitializedAsync();
-    }  
+    }
 
     private async Task SaveDeviceInDB(RFDevice device)
     {
-        // Initialisation des données une seule fois avant de commencer la boucle
-        SaveDataDevicesInfo(device);
-        SaveDataChannelsInfo(device);
+        DevicesViewModel.SaveDataDevicesInfo(device);
+        DevicesViewModel.SaveDataChannelsInfo(device);
+        // SaveDataDevicesInfo(device);
+        // SaveDataChannelsInfo(device);
 
         for (int i = 0; i < selectedQuantity; i++)
         {
-            // Utiliser MemberwiseClone pour cloner l'objet device
             var clonedDevice = device.Clone();
             DevicesViewModel.OperatingDevice = clonedDevice;
             try
@@ -122,36 +122,36 @@
         Snackbar.Add("Device(s) added", Severity.Success);
     }
 
-    private void SaveDataDevicesInfo(RFDevice device)
-    {
-        Debug.WriteLine("SaveDataDevice is called");
-        device.Range = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-        device.Step = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][3];
-        device.NumberOfChannels = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][2];
-        Debug.WriteLine(device.NumberOfChannels);
-        device.Channels = new List<RFChannel>();
-        for (int i = 0; i < device.NumberOfChannels; i++)
-        {
-            device.Channels.Add(new RFChannel());
-        }
-    }
-    private void SaveDataChannelsInfo(RFDevice device)
-    {
-        var freq = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-        int count = 1;
-        foreach (RFChannel chan in device.Channels)
-        {
-            chan.Range = device.Range;
-            chan.Step = device.Step;
-            chan.chanNumber = count;
-            chan.SelfSpacing = freq[4];
-            chan.ThirdOrderSpacing = freq[5];
-            chan.FifthOrderSpacing = freq[6];
-            chan.SeventhOrderSpacing = freq[7];
-            chan.ThirdOrderSpacing3Tx = freq[8];
-            count++;
-        }
-    }
+    // private void SaveDataDevicesInfo(RFDevice device)
+    // {
+    //     Debug.WriteLine("SaveDataDevice is called");
+    //     device.Range = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
+    //     device.Step = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][3];
+    //     device.NumberOfChannels = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][2];
+    //     Debug.WriteLine(device.NumberOfChannels);
+    //     device.Channels = new List<RFChannel>();
+    //     for (int i = 0; i < device.NumberOfChannels; i++)
+    //     {
+    //         device.Channels.Add(new RFChannel());
+    //     }
+    // }
+    // private void SaveDataChannelsInfo(RFDevice device)
+    // {
+    //     var freq = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
+    //     int count = 1;
+    //     foreach (RFChannel chan in device.Channels)
+    //     {
+    //         chan.Range = device.Range;
+    //         chan.Step = device.Step;
+    //         chan.chanNumber = count;
+    //         chan.SelfSpacing = freq[4];
+    //         chan.ThirdOrderSpacing = freq[5];
+    //         chan.FifthOrderSpacing = freq[6];
+    //         chan.SeventhOrderSpacing = freq[7];
+    //         chan.ThirdOrderSpacing3Tx = freq[8];
+    //         count++;
+    //     }
+    // }
     private void OnBrandChanged(string e)
     {
         Debug.WriteLine("Brand changed");
