--- a/RF_Go/Components/OnlineTab.razor
+++ b/RF_Go/Components/OnlineTab.razor
@@ -4,8 +4,10 @@
 @using RF_Go.Services.NetworkProtocols
 @using RF_Go.Components.Modal
 @using MudBlazor
-@inject DiscoveryService discoveryService
+@inject DevicesViewModel DevicesViewModel
 @inject IDialogService DialogService
+@inject MudBlazor.ISnackbar Snackbar
+@inject DiscoveryService DiscoveryService
 
 <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
     <div>
@@ -15,7 +17,7 @@
     </div>
 </div>
 
-@if (DiscoveredDevices.Count() == 0)
+@if (DiscoveryService.DiscoveredDevices.Count == 0)
 {
     <MudContainer MaxWidth="MaxWidth.Medium" Style="display: flex; justify-content: center; align-items: center;">
         <MudPaper Class="pa-6" Elevation="3" Style="text-align: center; max-width: 400px;">
@@ -27,8 +29,7 @@
 }
 else
 {
-
-    <MudTable Items="@DiscoveredDevices"
+    <MudTable Items="@DiscoveryService.DiscoveredDevices"
               Bordered="true"
               Hover="true"
               Striped="true"
@@ -52,49 +53,40 @@ else
                 @if (context.IsSynced)
                 {
                     <MudText Variant="Variant.Filled" Color="Color.Primary">
-                        Synced !
+                        Synced!
                     </MudText>
                 }
                 else
                 {
                     <MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="() => HandleSyncDevice(context)">
-                        Sync!!
+                        Sync!
                     </MudButton>
                 }
             </MudTd>
         </RowTemplate>
     </MudTable>
 }
+
 @code {
-    [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
-    //[Parameter] public EventCallback<RFDevice> OnDeviceSynced { get; set; }
-    private List<DeviceDiscoveredEventArgs> DiscoveredDevices = new();
     private List<RFDevice> MatchingOfflineDevices = new();
 
     protected override void OnInitialized()
     {
-        discoveryService.DeviceDiscovered += OnDeviceDiscovered;
-        discoveryService.StartDiscovery();
-        discoveryService.TriggerSennheiserDiscovery();
+        DiscoveryService.DeviceDiscovered += OnDeviceDiscovered; // S'abonner à l'événement
+       
     }
 
     private void OnDeviceDiscovered(object sender, DeviceDiscoveredEventArgs e)
     {
-        if (!DiscoveredDevices.Any(d => d.Name == e.Name))
-        {
-            InvokeAsync(() =>
-            {
-                DiscoveredDevices.Add(e);
-                StateHasChanged();
-            });
-        }
+        InvokeAsync(StateHasChanged); // Mettre à jour l'interface utilisateur
     }
+
     private void Resync()
     {
-        discoveryService.StartDiscovery();
-        discoveryService.TriggerSennheiserDiscovery();
+        DiscoveryService.StartDiscovery();
         StateHasChanged();
     }
+
     private async void HandleSyncDevice(DeviceDiscoveredEventArgs device)
     {
         MatchingOfflineDevices = DevicesViewModel.Devices
@@ -107,7 +99,7 @@ else
         }
         else
         {
-            Debug.Print("no match");
+            Snackbar.Add("No matching device found to sync with", Severity.Info);
         }
     }
 
@@ -129,10 +121,4 @@ else
             StateHasChanged();
         }
     }
-    public void Dispose()
-    {
-        discoveryService.StopDiscovery();
-        discoveryService.DeviceDiscovered -= OnDeviceDiscovered;
-    }
 }
-
