--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -85,19 +85,13 @@
             </MudTabPanel>
         </MudTabs>
     }
-    </MudContainer>
+</MudContainer>
 
-    <div class="chart-container">
-        <div id="sciChartDiv" style="width: 100%; height: 200px;"></div>
-    </div>
-    @code
-    {
-
-
-
-
-
-
+<div class="chart-container">
+    <div id="sciChartDiv" style="width: 100%; height: 200px;"></div>
+</div>
+@code
+{
 
     private RFDevice Device => DevicesViewModel.OperatingDevice;
     private bool isLoadingJSON = true;
@@ -126,6 +120,8 @@
     {
         return deviceData.Brands[brand][model][frequency][spacing];
     }
+
+
     private string CalculateStyle(RFChannel chan)
     {
         string color = chan.Checked ? "aliceblue" : "red";
@@ -138,12 +134,18 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        var json = JsonData.Devices;
+        var json = DeviceDataJson.Devices;
         deviceData = JsonConvert.DeserializeObject<DeviceData>(json);
         await DevicesViewModel.LoadDevicesAsync();
         await FrequencyDataViewModel.LoadFrequencyDataAsync();
+
+        DiscoveryService.StartDiscovery();
         isLoadingJSON = false;
         StateHasChanged();
+    }
+    public void Dispose()
+    {
+        DiscoveryService.StopDiscovery();
     }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
